--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ solana-rpc-client = "3.0.10"
 solana-keypair = "3.1.0"
 solana-commitment-config = "3.1.0"
 solana-pubkey = "4.0.0"
+solana-sdk = "3.0.0"
+solana-system-interface = { version = "2.0.0", features = ["bincode"] }
